@@ -34,6 +34,7 @@ Checks.constructor_name= If you proceed, the method {0} in ''{1}'' will have a c
 Checks.method_names_lowercase=This name is discouraged. According to convention, names of methods should start with lowercase letters
 Checks.error.InvalidClassName=Class name is not valid. {0}
 Checks.warning.ClassNameDiscouraged=Class name is discouraged. {0}
+Checks.no_files=No files are found.
 
 #######################################
 # org.eclipse.jdt.internal.core.refactoring.base
@@ -346,7 +347,7 @@ RenameTypeRefactoring.member_type=Member Type declared inside ''{0}'' is named {
 RenameTypeRefactoring.another_type=Another type named ''{0} is referenced in ''{1}''
 RenameTypeRefactoring.wrong_element=Rename refactoring does not handle this type of element.
 RenameTypeRefactoring.virtual_method=Renaming a virtual method. Consider renaming the base and derived class methods (if any).
-RenameTypeRefactoring.no_files=No files are found.
+
 
 
 TextMatchFinder.comment=text reference update in a comment
